Send custom email

--- a/Site/appsettings.json
+++ b/Site/appsettings.json
@@ -5,5 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "hCaptcha": {
+    "SiteKey": "db46da19-0eaf-4e7d-99d1-70a247211114",
+    "SecretKey": "0x258c1Aaa0bd5e8aBdb4Ec9F3E00222e0E760B243"
+  },
+  "Smtp": {
+    "Host": "db.nexus-company.net",
+    "Login": "contact@mail.nexus-company.net",
+    "Password": "ctc",
+    "Port": 25,
+    "EnableSsl": false
+  }
 }
