--- a/Site/Nexus.Web.csproj
+++ b/Site/Nexus.Web.csproj
@@ -15,4 +15,24 @@
     <Content Include="Views\Shared\_Layout.cshtml.css" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="HCaptcha.AspNetCore" Version="0.9.19" />
+    <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.1.175" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
