--- a/Site/Properties/launchSettings.json
+++ b/Site/Properties/launchSettings.json
@@ -27,13 +27,13 @@
     },
     "WSL": {
       "commandName": "WSL2",
-      "launchBrowser": true,
-      "launchUrl": "https://localhost:7202",
+      "distributionName": "",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "ASPNETCORE_URLS": "https://localhost:7202;http://localhost:5110"
       },
-      "distributionName": ""
+      "launchBrowser": true,
+      "launchUrl": "https://localhost:7202"
     }
   },
   "iisSettings": {
